--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="/static/styles/sign_up.css">
     <link rel="stylesheet" href="/static/styles/login.css"> 
     <link rel="stylesheet" href="/static/styles/nav.css"> 
+     <link rel="stylesheet" href="/static/styles/create_post.css">
+    <link rel="stylesheet" href="/static/styles/home.css">
 
 
-    <title>Single Page App</title>
+
+    <title>Community Forum</title>
 </head>
 <body>
     <nav id="nav">
