--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/styles/nav.css"> 
      <link rel="stylesheet" href="/static/styles/create_post.css">
     <link rel="stylesheet" href="/static/styles/home.css">
+    <link rel="stylesheet" href="/static/styles/view_post.css">
 
 
 
