--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <link rel="stylesheet" href="/static/styles/create_post.css">
     <link rel="stylesheet" href="/static/styles/home.css">
     <link rel="stylesheet" href="/static/styles/view_post.css">
+    <link rel="stylesheet" href="/static/styles/errors.css">
 
 
 
