--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/styles/home.css">
     <link rel="stylesheet" href="/static/styles/view_post.css">
     <link rel="stylesheet" href="/static/styles/errors.css">
+    <link rel="stylesheet" href="/static/styles/chat.css">
 
 
 
